[tool.pdm]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Mikael Souza", email = "mikael.souza.cc@gmail.com"},
]
dependencies = [
    "sklearn>=0.0.post1",
    "numpy>=1.24.1",
    "pandas>=1.5.2",
    "dvc>=2.41.1",
    "black>=22.12.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}
