[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "ipykernel>=6.20.2",
    "black[jupyter]>=22.12.0",
]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Mikael Souza", email = "mikael.souza.cc@gmail.com"},
]
dependencies = [
    "numpy>=1.24.1",
    "pandas>=1.5.2",
    "scikit-learn>=1.2.0",
    "pyarrow>=10.0.1",
    "pyaml>=21.10.1",
]
requires-python = ">=3.10"
license = {text = "MIT"}
