[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "ipykernel>=6.20.2",
    "black>=23.3.0",
    "dvc>=2.47.0",
    "ruff>=0.0.265",
    "pre-commit>=3.3.1",
]

[project]
name = "dummy-model"
version = "0.0.1"
description = ""
authors = [{ name = "Mikael Souza", email = "mikael.souza.cc@gmail.com" }]
dependencies = [
    "numpy>=1.24.1",
    "pandas>=1.5.2",
    "scikit-learn>=1.2.0",
    "pyarrow>=10.0.1",
    "pyaml>=21.10.1",
    "dvclive>=1.3.2",
    "matplotlib>=3.6.3",
]
requires-python = ">=3.10"
license = { text = "MIT" }
